--- a/order/templates/index.html
+++ b/order/templates/index.html
@@ -1,9 +1,3 @@
-{% extends "base.html" %}
-
-{% block content %}
-
-{% endblock %}
-
 <!-- create a folder named templates, put this file into it -->
 <!DOCTYPE html>
 <title>Resole Beta</title>
@@ -12,7 +6,7 @@
     {{ form.hidden_tag() }}
     <p>
         {{ form.first.label }}<br>
-        {{ form.username(size=32) }}
+        {{ form.first(size=32) }}
     </p>
     <p>
         {{ form.last.label }}<br>
@@ -29,20 +23,4 @@
     <p>{{ form.quote() }} {{ form.quote.label }}</p>
     <p>{{ form.submit() }}</p>
 </form>
-
-<!--
-<h1>Photo Upload</h1>
-<form method="POST" enctype="multipart/form-data">
-     {{ form.hidden_tag() }}
-     {{ form.photo }}
-     {% for error in form.photo.errors %}
-         <span style="color: red;">{{ error }}</span>
-     {% endfor %}
-     {{ form.submit }}
-</form>
-
-{% if file_url %}
-<br>
-<img src="{{ file_url }}">
-{% endif %}
--->
+</html>
