--- a/order/templates/index.html
+++ b/order/templates/index.html
@@ -1,8 +1,9 @@
 <!-- create a folder named templates, put this file into it -->
 <!DOCTYPE html>
 <title>Resole Beta</title>
-<h1>Order Form</h1>
-<form action="" method="post" novalidate>
+<h1>Resole Beta</h1>
+<h2> Order Form </h2>
+<form action="" method="post" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
     <p>
         {{ form.first.label }}<br>
@@ -15,6 +16,9 @@
     <p>
         {{ form.email.label }}<br>
         {{ form.email(size=32) }}
+        {% for error in form.email.errors %}
+         <span style="color: red;">{{ error }}</span>
+        {% endfor %}
     </p>
     <p>
         {{ form.comments.label }}<br>
@@ -22,10 +26,14 @@
     </p>
     <p>{{ form.quote() }} {{ form.quote.label }}</p>
     <p>
-        {{ form.photo }}
-        {% for error in form.photo.errors %}
+        {{ form.upload }}
+        {% for error in form.upload.errors %}
          <span style="color: red;">{{ error }}</span>
         {% endfor %}
+        {% if file_url %}
+        <br>
+        <img src="{{ file_url }}">
+        {% endif %}
     </p>
     <p>{{ form.submit() }}</p>
 </form>
